[gd_scene load_steps=19 format=2]

[ext_resource path="res://Assets/General/Shadows/circle shadow small.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Rendering/DepthTestCharacterSprite.gd" type="Script" id=2]
[ext_resource path="res://Scripts/Rendering/DepthTestFloorSprite.gd" type="Script" id=3]
[ext_resource path="res://NPC/NPC_ShadowAreaCheck.gd" type="Script" id=4]
[ext_resource path="res://Scripts/Objects/EnemyMotionRoot.gd" type="Script" id=5]
[ext_resource path="res://Scripts/Objects/EnemyTest.gd" type="Script" id=6]
[ext_resource path="res://Enemies/BattleTrigger.tscn" type="PackedScene" id=7]
[ext_resource path="res://Enemies/PlayerDetection.tscn" type="PackedScene" id=8]
[ext_resource path="res://Enemies/Kugi Canyon/Scorpus SS.png" type="Texture" id=9]
[ext_resource path="res://Areas/Cherry Trail/Cherry Trail BA 1.tscn" type="PackedScene" id=10]
[ext_resource path="res://Areas/Cherry Trail/Cherry Trail BA 2.tscn" type="PackedScene" id=11]

[sub_resource type="CircleShape2D" id=180]

[sub_resource type="CircleShape2D" id=172]
radius = 1.0

[sub_resource type="CircleShape2D" id=178]
radius = 130.0

[sub_resource type="CircleShape2D" id=179]
radius = 8.94814

[sub_resource type="Animation" id=173]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("BodyVisualRoot/Enemy:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("../ShadowYSort/ShadowVisualRoot/ShadowCircle:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 2, -12 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("BodyVisualRoot/Enemy:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 3, -24 ) ]
}

[sub_resource type="Animation" id=176]
resource_name = "walk_back"
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("BodyVisualRoot/Enemy:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 7, 6, 7, 8 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("BodyVisualRoot/Enemy:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ Vector2( 3, -24 ), Vector2( 3, -24 ), Vector2( 3, -24 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("../ShadowYSort/ShadowVisualRoot/ShadowCircle:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ Vector2( 3, -16 ), Vector2( 2, -16 ), Vector2( 3, -16 ), Vector2( 2, -17 ) ]
}

[sub_resource type="Animation" id=177]
resource_name = "walk_front"
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("BodyVisualRoot/Enemy:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 0, 2 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("../ShadowYSort/ShadowVisualRoot/ShadowCircle:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ Vector2( 2, -12 ), Vector2( 3, -12 ), Vector2( 3, -12 ) ]
}

[node name="Scorpus" type="YSort"]
script = ExtResource( 6 )
spawn_z = 20
ground_enemy = true
min_speed = 0.4
max_speed = 0.5
target_scene = ExtResource( 10 )
alt_scene = ExtResource( 11 )
alt_chance = 50
alternate = true

[node name="MotionRoot" type="KinematicBody2D" parent="."]
position = Vector2( 0, 1 )
collision_mask = 2
collision/safe_margin = 0.5
script = ExtResource( 5 )
spawn_z = 20
ACCELERATION = 45
CHASE_SPEED = 400
WANDER_SPEED = 27
FRICTION = 1.0
MIN_IDLE_TIME = 3
MAX_IDLE_TIME = 6
MIN_WANDER_TIME = 3
MAX_WANDER_TIME = 6
WANDER_RADIUS = 10
MAX_CHASE_DISTANCE = 170

[node name="CollisionShape2D" type="CollisionShape2D" parent="MotionRoot"]
position = Vector2( 2, -8 )
scale = Vector2( 1.44179, 0.395531 )
shape = SubResource( 180 )

[node name="ShadowAreaCheck" type="Area2D" parent="MotionRoot"]
script = ExtResource( 4 )

[node name="ShadowCheck" type="CollisionShape2D" parent="MotionRoot/ShadowAreaCheck"]
shape = SubResource( 172 )

[node name="PlayerDetection" parent="MotionRoot" instance=ExtResource( 8 )]
visible = false
position = Vector2( 6, 11 )
scale = Vector2( 0.94923, 0.924754 )
collision_layer = 0
collision_mask = 7

[node name="CollisionShape2D" type="CollisionShape2D" parent="MotionRoot/PlayerDetection"]
modulate = Color( 1, 1, 1, 0.254902 )
position = Vector2( -1, -17 )
shape = SubResource( 178 )
disabled = true

[node name="BattleTrigger" parent="MotionRoot" instance=ExtResource( 7 )]
visible = false
position = Vector2( 5, -2 )
scale = Vector2( 0.972756, 0.936889 )
collision_layer = 7
collision_mask = 6

[node name="CollisionShape2D2" type="CollisionShape2D" parent="MotionRoot/BattleTrigger"]
position = Vector2( -3.08402, -9.60626 )
scale = Vector2( 1.60839, -1.51859 )
shape = SubResource( 179 )

[node name="ShadowYSort" type="Node2D" parent="."]

[node name="ShadowVisualRoot" type="Node2D" parent="ShadowYSort"]

[node name="ShadowCircle" type="Sprite" parent="ShadowYSort/ShadowVisualRoot"]
modulate = Color( 1, 1, 1, 0.75 )
position = Vector2( 2, -12 )
scale = Vector2( 0.8, 0.8 )
texture = ExtResource( 1 )
script = ExtResource( 3 )
alpha_clip = 0.01
always_update = true
use_dithering = false
use_dither_blending = false
use_transparency = true

[node name="BodyYSort" type="Node2D" parent="."]

[node name="BodyVisualRoot" type="Node2D" parent="BodyYSort"]

[node name="Enemy" type="Sprite" parent="BodyYSort/BodyVisualRoot"]
modulate = Color( 1, 0.968627, 0.984314, 1 )
position = Vector2( 3, -24 )
scale = Vector2( 0.8, 0.8 )
texture = ExtResource( 9 )
hframes = 9
script = ExtResource( 2 )
depth_test_offset = Vector2( -8, 28 )
feet_height = 10.0
use_dithering = false
use_dither_blending = false

[node name="AnimationPlayer" type="AnimationPlayer" parent="BodyYSort"]
playback_speed = 0.4
anims/RESET = SubResource( 173 )
anims/walk_back = SubResource( 176 )
anims/walk_front = SubResource( 177 )

[node name="Timer" type="Timer" parent="."]

[connection signal="start_chase" from="MotionRoot/PlayerDetection" to="MotionRoot" method="_on_PlayerDetection_start_chase"]
[connection signal="stop_chase" from="MotionRoot/PlayerDetection" to="MotionRoot" method="_on_PlayerDetection_stop_chase"]
[connection signal="triggered" from="MotionRoot/BattleTrigger" to="." method="_on_BattleTrigger_triggered"]
[connection signal="timeout" from="Timer" to="MotionRoot" method="_on_Timer_timeout"]
